# python-imfit

./: .gitignore  MANIFEST.in  README.rst  setup.cfg  setup.py
docs/: conf.py  index.rst
docs/imfit/: index.rst
imfit/: __init__.py  config.py  fit_wrapper.pyx  fitting.py  imfit_lib.pxd  lib_wrapper.pyx  model.py  psf.py  setup_package.py  test_extlib.pyx
imfit/lib/: __init__.py  imfit_lib.pxd  lib_wrapper.pyx
imfit/tests/: performance_test.py  test_fit_wrapper.py  test_imfit.py  test_model.py
