[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = imfit
description = Python bindings for Imfit
long_description = This is a package for doing X that relies on astropy
author = Andre Luiz de Amorim
author_email = andre@astro.ufsc.br
license = GPL
url = http://astropy.org/
edit_on_github = False
github_project = astropy/astropy
